<resources>
    <string name="app_name">BusinessBuddy</string>
    <string name="etconpass">confirm password</string>
    <string name="etmail">E-MAIL</string>
    <string name="etname">NAME</string>
    <string name="etpass">create password</string>
    <string name="etphone">PHONE</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_password">Create Password</string>
    <string name="already_have_an_account">Already have an Account?</string>
    <string name="register">Register</string>
    <string name="submit">Submit</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="don_t_have_account">Don\'t Have Account.</string>
    <string name="button">Button</string>
    <string name="signup">SignUp</string>
    <string name="add_item">Add Item</string>
    <string name="item_price">Item Price</string>
    <string name="item_quantity">Item Quantity</string>
    <string name="add_itemTag">Add Item</string>
    <string name="category">Category</string>
    <string name="item_code">Item Code</string>
    <string name="item_name">Item Name</string>
    <string name="home">Home</string>
    <string name="see_items">See Items</string>
    <string name="add_item_code">Item Code</string>
    <string name="add_item_name">Item Name</string>
    <string name="add_category">Category</string>
    <string name="add_price">Price</string>
    <string name="add_total_amount">Total Amount</string>
    <string name="add_quantity">Quantity</string>
    <string name="parchase_home">Home</string>
    <string name="parchase_see_stock">See Stock</string>
    <string name="parchase_submit">Submit</string>
    <string name="add_contact_number">Contact Number</string>
    <string name="parchase_date">Date</string>
</resources>