<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contextClickable="true"
        android:importantForAccessibility="no"
        android:scaleType="fitXY"
        android:src="@drawable/background"
        android:textAlignment="center"
        tools:ignore="HardcodedText"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-16dp" />

    <EditText
        android:id="@+id/etname"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="172dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/ip_shap"
        android:backgroundTintMode="src_in"
        android:drawableStart="@drawable/person"
        android:drawablePadding="12dp"
        android:ems="10"
        android:gravity="center|start"
        android:hint="@string/etname"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:singleLine="false"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textColorLink="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/background" />

    <EditText
        android:id="@+id/etconpass"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="24dp"
        android:autofillHints=""
        android:background="@drawable/ip_shap"
        android:backgroundTintMode="src_in"
        android:drawableStart="@drawable/security"
        android:drawablePadding="12dp"
        android:ems="10"
        android:gravity="center|start"
        android:hint="@string/confirm_password"
        android:inputType="numberPassword"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textColorLink="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.37"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etpass"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/etpass"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/ip_shap"
        android:backgroundTintMode="src_in"
        android:drawableStart="@drawable/security"
        android:drawablePadding="12dp"
        android:ems="10"
        android:gravity="center|start"
        android:hint="@string/create_password"
        android:importantForAutofill="no"
        android:inputType="numberPassword"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textColorLink="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etphone" />

    <EditText
        android:id="@+id/etemail"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/ip_shap"
        android:backgroundTintMode="src_in"
        android:drawableStart="@drawable/email"
        android:drawablePadding="12dp"
        android:ems="10"
        android:gravity="center|start"
        android:hint="@string/etmail"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textColorLink="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etname" />

    <EditText
        android:id="@+id/etphone"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/ip_shap"
        android:backgroundTintMode="src_in"
        android:drawableStart="@drawable/phone"
        android:drawablePadding="12dp"
        android:ems="10"
        android:gravity="center|start"
        android:hint="@string/etphone"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textColorLink="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etemail"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/tag"
        android:layout_width="157dp"
        android:layout_height="42dp"
        android:drawablePadding="5dp"
        android:importantForAutofill="no"
        android:text="@string/register"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/background"
        app:layout_constraintVertical_bias="0.124"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="60sp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="60sp"
        android:text="@string/submit"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etconpass" />

    <TextView
        android:id="@+id/already"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="Already Have an Account?"
        android:textColor="@color/white"
        android:textColorLink="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>